--- a/mario/index.html
+++ b/mario/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+Hello
     <script type="module" src="./mario.js"></script>
     <script type="module" src="../build.js"></script>
 </body>
