--- a/mario/index.html
+++ b/mario/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="../styles/style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Mario (NES)</title>
 </head>
 
