profile page setup

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -15,17 +15,23 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
-        </div>
-    </header>    
-    <button id="logout">Logout</button>
+        <button id="logout">Logout</button>
+    </header>
     <main>
-        <h1>You are logged in!</h1>
+        <img src="../assets/mario.png" alt="No Avatar" id="avatar">
+        <h2 id="username">Mario!</h2>
+        <span id="joinedDate">Joined Date: </span>
+        <span id="gamesPlayed">Games Played: </span>
+        <button id="editButton">Edit Profile</button>
+        <p id="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>Previous Scores</h3>
+        <ul id="previousScoresContainer">
+
+        </ul>
     </main>
-    <footer>
-        <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
-    </footer>
     <script type="module" src="./other-page.js"></script>
 </body>
 
