--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -10,18 +10,66 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <style>
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+        input[type=radio] {
+            /* opacity: 0; */
+            cursor: pointer;
+        }
+        input#mario[type=radio] + label {
+            background-image: url("../assets/avatars/mario.png");
+            height: 200px;
+            width: 200px;
+            display:inline-block;
+            padding: 0 0 0 0px;
+        }
+        input[type=radio]:checked + label {
+        outline: 5px solid orange;
+        }
+    </style>
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
-        </div>
+
     </header>    
     <button id="logout">Logout</button>
     <main>
-        <h1>You are logged in!</h1>
+        <h1>Set a username and avatar to continue</h1>
+        <form action="">
+            <label for="username">Username</label>
+            <input type="text" name="username" placeholder="Username">
+            <div id="avatar-select">
+                <input type="radio" name="mario" id="mario">
+                <label for="mario"></label>
+                <input type="radio" name="luigi" id="luigi">
+                <label for="luigi"></label>
+                <input type="radio" name="yoshi" id="yoshi">
+                <label for="yoshi"></label>
+                <input type="radio" name="toad" id="toad">
+                <label for="toad"></label>
+                <input type="radio" name="peach" id="peach">
+                <label for="peach"></label>
+                <input type="radio" name="daisy" id="daisy">
+                <label for="daisy"></label>
+                <input type="radio" name="donkey-kong" id="donkey-kong">
+                <label for="donkey-kong"></label>
+                <input type="radio" name="toadette" id="toadette">
+                <label for="toadette"></label>
+                <input type="radio" name="wario" id="wario">
+                <label for="wario"></label>
+                <input type="radio" name="koopa-troopa" id="koopa-troopa">
+                <label for="koopa-troopa"></label>
+                <input type="radio" name="boo" id="boo">
+                <label for="boo"></label>
+                <input type="radio" name="bowser" id="bowser">
+                <label for="bowser"></label>
+            </div>
+        </form>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
