added basics of profile page

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -11,6 +11,80 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <title>Document</title>
+    <style>
+        .hidden {
+            display: none;
+        }
+
+        main {
+            margin: 20px 10vw;
+
+        }
+
+        section {
+            margin-top: 40px;
+            margin-bottom: 10px;
+            padding: 0px;
+        }
+        
+        p {
+            margin: 0px;
+        }
+
+        .flex-row {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .flex-column {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .space-between {
+            justify-content: space-between;
+            align-content: space-between;
+        }
+
+        #avatar {
+            height: 60px;
+            width: 60px;
+            padding: 10px;
+            border: 1px solid grey;
+            border-radius: 90px;
+            margin-right: 20px;
+        }
+
+        button {
+            border: 2px solid black;
+            border-radius: 5px;
+            background-color: white;
+            color: black;
+            height: 5vh;
+        }
+
+        button:hover {
+            border: 2px solid white;
+            border-radius: 5px;
+            background-color: black;
+            color: white;
+        }
+
+        label {
+            margin: 10px;
+        }
+
+        .labelName {
+            width: 10vw;
+        }
+
+        .editBio {
+            height: 40px;
+            width: 90%;
+        }
+    </style>
 </head>
 
 <body>
@@ -18,21 +92,40 @@
         <button id="logout">Logout</button>
     </header>
     <main>
-        <img src="../assets/mario.png" alt="No Avatar" id="avatar">
-        <h2 id="username">Mario!</h2>
-        <span id="joinedDate">Joined Date: </span>
-        <span id="gamesPlayed">Games Played: </span>
-        <button id="editButton">Edit Profile</button>
-        <p id="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <section class="flex-row space-between">
+            <div>
+                <div class="flex-row">
+                    <img src="../assets/mario.png" alt="No Avatar" id="avatar">
+                    <h2 id="username">Mario!</h2>
+                </div>
+                <span id="joinedDate">Joined Date: </span>
+            </div>
+            <button id="editButton" class="hidden">Edit Profile</button>
+        </section>
+        <div class="formContainer hidden">
+            <form id="editProfile" class="flex-column">
+                <label for="editUsername">
+                    Username:
+                    <input type="text" name="editUsername">
+                </label>
+                <label for="editAvatar">
+                    Avatar Upload:
+                    <input type="file" name="editAvatar">
+                </label>
+                <label for="editBio">
+                     Bio: 
+                    <input type="text" name="editBio" class="editBio">
+                </label>
+                <button>Submit Changes</button>
+            </form>
+        </div>
+        <p id="bio"></p>
         <h3>Previous Scores</h3>
         <ul id="previousScoresContainer">
 
         </ul>
     </main>
-    <script type="module" src="./other-page.js"></script>
+    <script type="module" src="./profile.js"></script>
 </body>
 
 </html>
