--- a/home-page/index.html
+++ b/home-page/index.html
@@ -11,6 +11,55 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <title>Document</title>
+    <style>
+
+        main{
+            display: grid;
+            grid-template-columns: 1fr 2fr;
+        }
+
+        #leaderboard-container{
+            width: 100%
+        }
+
+        .mini-leaderboard{
+            /* width: 100%; */
+            display: flex;
+            flex-wrap: wrap;
+            background-color: black;
+            color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            flex-direction: column;
+            padding: 0px 20px;
+            font-size: 1.5rem;
+            align-items: center;
+        }
+
+        .leaders{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #display-games{
+            width: 100%;
+        }
+
+        #display-games img{
+            width: 100%;
+            margin-left: 60px;
+        }
+
+        #label{
+            margin: 0 auto;
+            background-color: black;
+            font-size: 2rem;
+            color: white;
+            padding: 5px;
+        }
+    </style>
 </head>
 
 <body>
@@ -21,12 +70,20 @@
     </header>    
     <button id="logout">Logout</button>
     <main>
-        <h1>You are logged in!</h1>
+        <section id="display-games">
+            <img src="/assets/Mario.gif" />
+            <button id="play-game-button">Play Game</button>
+        </section>
+        <section id="leaderboard-container">
+            <p id="label">Leader Board</p>
+            <div id="display-leaderboard">
+            </div>
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
     </footer>
-    <script type="module" src="./other-page.js"></script>
+    <script type="module" src="./home-page.js"></script>
 </body>
 
 </html>
