--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -11,6 +11,75 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <title>Document</title>
+    <style>
+        .leaderboard{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* height: 100%; */
+}
+
+.leaderboard-left{
+    border: 1px solid black;
+    height: 100%;
+    display: grid;
+    align-content: center;
+}
+
+.leaderboard-right{
+    border: 1px solid black;
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+select{
+    width: 25%;
+}
+
+.trophy{
+    display: grid;
+}
+
+h1{
+    margin: 0;
+    padding: 0;
+}
+
+.score-container{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.table{
+    display: flex;
+    width: 100%;
+    flex-direction: row; 
+    align-items: center;
+justify-content: center;
+}
+
+.score{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+
+}
+
+.score h3{
+    margin-right: 15px;
+}
+
+.table h3{
+    margin-right: 15px;
+}
+
+.score P {
+    margin: 0;
+}
+    </style>
 </head>
 
 <body>
@@ -20,13 +89,38 @@
         </div>
     </header>    
     <button id="logout">Logout</button>
-    <main>
-        <h1>You are logged in!</h1>
-    </main>
+    <div class="leaderboard">
+<div class="leaderboard-left">
+
+    <img class="trophy" src="../assets/leaderboard-trophy.png" alt="">
+
+</div>
+
+<div class="leaderboard-right">
+
+    <h1>Top Scores</h1>
+    <select name="sort-param" id="sort-param">
+     <option value="score">Sort by Score</option>
+    </select>
+    <select name="sort-asc-desc" id="sort-asc-desc">
+        <option value="asc">Lowest</option>
+        <option value="desc">Highest</option>
+      </select>
+<div class="table">
+        <h3>Initials</h3>  <h3>Score</h3> <p>Time</p> </div>
+    <div class="score-container">
+
+
+    </div>
+
+</div>
+
+    
+    </div>
     <footer>
-        <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
+
     </footer>
-    <script type="module" src="./other-page.js"></script>
+    <script type="module" src="./leaderboard.js"></script>
 </body>
 
 </html>
