styling for all pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
+            <img src="assets/Kaboomio.gif" />
         </div>
     </header>
     <main class="auth-main">
