--- a/home-page/index.html
+++ b/home-page/index.html
@@ -15,11 +15,12 @@
 
         main{
             display: grid;
-            grid-template-columns: 1fr 2fr;
+            grid-template-columns: 2fr 1fr;
         }
 
         #leaderboard-container{
-            width: 100%
+            width: 100%;
+            font-size: 1rem;
         }
 
         .mini-leaderboard{
@@ -32,7 +33,7 @@
             background-size: cover;
             flex-direction: column;
             padding: 0px 20px;
-            font-size: 1.5rem;
+            font-size: 1rem;
             align-items: center;
         }
 
@@ -41,6 +42,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            font-size: 1rem;
         }
 
         #display-games{
@@ -58,6 +60,14 @@
             font-size: 2rem;
             color: white;
             padding: 5px;
+        }
+
+        #play-game-button{
+            position: absolute;
+            border: none;
+            color: white;
+            background-color: rgb(43, 43, 43);
+            opacity: .7;
         }
     </style>
 </head>
