--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -84,11 +84,8 @@ justify-content: center;
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
-        </div>
     </header>    
-    <button id="logout">Logout</button>
+    <!-- <button id="logout">Logout</button> -->
     <div class="leaderboard">
 <div class="leaderboard-left">
 
