--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -15,8 +15,9 @@
 
 <body>
     <header>
-        <button id="logout">Logout</button>
+        
     </header>
+    <!-- <button id="logout">Logout</button> -->
     <main>
         <section class="flex-row space-between">
             <div>
