--- a/about-page/index.html
+++ b/about-page/index.html
@@ -15,11 +15,8 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
-        </div>
     </header>    
-    <button id="logout">Logout</button>
+    <!-- <button id="logout">Logout</button> -->
     <main>
         <h1>You are logged in!</h1>
     </main>
