finished up initial navigation bar

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <header>
+        <button id="logout">Logout</button>
     </header>    
-    <!-- <button id="logout">Logout</button> -->
     <main>
         <h1>You are logged in!</h1>
     </main>
