--- a/home-page/index.html
+++ b/home-page/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <style>
+
+.mini:hover{
+    opacity: .8;
+    background-color: rgb(73, 73, 73);
+    cursor: pointer;
+    padding: 0px 20px;
+}
+    </style>
     <title>Document</title>
 </head>
 
