Adjusted leaderboard sort and added transparent background to trophy image

--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -98,6 +98,7 @@ justify-content: center;
     <h1>Top Scores</h1>
     <select name="sort-param" id="sort-param">
      <option value="score">Sort by Score</option>
+     <option value="time">Sort by Time</option>
     </select>
     <select name="sort-asc-desc" id="sort-asc-desc">
         <option value="asc">Lowest</option>
