--- a/home-page/index.html
+++ b/home-page/index.html
@@ -18,6 +18,11 @@
     cursor: pointer;
     padding: 0px 20px;
 }
+
+#play-game-button:hover{
+    opacity: 1;
+    cursor: pointer;
+}
     </style>
     <title>Document</title>
 </head>
