--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -85,7 +85,7 @@ justify-content: center;
 <body>
     <header>
     </header>    
-    <!-- <button id="logout">Logout</button> -->
+    <!-- <button id="logout">Logout</button -->
     <div class="leaderboard">
 <div class="leaderboard-left">
 
