--- a/home-page/index.html
+++ b/home-page/index.html
@@ -37,7 +37,7 @@
             <button id="play-game-button">Play Game</button>
         </section>
         <section id="leaderboard-container">
-            <p id="label">Leader Board</p>
+            <p id="label">Leader Board 🏆</p>
             <div id="display-leaderboard">
             </div>
         </section>
