--- a/home-page/index.html
+++ b/home-page/index.html
@@ -41,6 +41,9 @@
             <div id="display-leaderboard">
             </div>
         </section>
+        <section>
+            Hello
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
