--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -84,6 +84,16 @@ justify-content: center;
 
 <body>
     <header>
+        <div class="header-left">
+            <h1>Leaderboard</h1>
+        </div>
+        <div class="header-right">
+            <div class="icons">
+                <a href="../">
+                    <img src="../assets/sign-in-icon.png" id="sign-in-icon" />
+                </a>
+            </div>
+        </div>
     </header>    
     <!-- <button id="logout">Logout</button -->
     <div class="leaderboard">
