changes to sign in page background image positioning and header/navigation

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="assets/Kaboomio.gif" />
+        <div class="header-left">
+            <img src="assets/Kaboomio.gif" class="logo" />
+        </div>
+        <div class="header-right">
+            <div class="icons">
+                <a href="../leaderboard/">
+                    <img src="../assets/trophy-icon.png" id="trophy-icon" />
+                </a>
+            </div>
         </div>
     </header>
     <main class="auth-main">
