added a meet the team link to the footer

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -64,6 +64,16 @@
             </tbody>
         </table>
     </main>
+    <footer>
+        <div class="footer-left">
+            <a href="../about-page" id="about-link">
+                <div>
+                    Meet the Team
+                </div>
+            </a>
+        </div>
+        <div class="copy footer-right">&copy; 2022 Alchemy Code Lab</div>
+    </footer>
     <script type="module" src="./profile.js"></script>
 </body>
 
