--- a/about-page/index.html
+++ b/about-page/index.html
@@ -36,7 +36,7 @@
         <h1>You are logged in!</h1>
     </main>
     <footer>
-        <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
+        <div class="copy footer-right">&copy; 2022 Alchemy Code Lab</div>
     </footer>
     <script type="module" src="./about.js"></script>
 </body>
