--- a/home-page/index.html
+++ b/home-page/index.html
@@ -43,7 +43,14 @@
         </section>
     </main>
     <footer>
-        <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
+        <div class="footer-left">
+            <a href="../about-page" id="about-link">
+                <div>
+                    Meet the Team
+                </div>
+            </a>
+        </div>
+        <div class="copy footer-right">&copy; 2022 Alchemy Code Lab</div>
     </footer>
     <script type="module" src="./home-page.js"></script>
 </body>
