--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -126,7 +126,14 @@ justify-content: center;
     
     </div>
     <footer>
-
+        <div class="footer-left">
+            <a href="../about-page" id="about-link">
+                <div>
+                    Meet the Team
+                </div>
+            </a>
+        </div>
+        <div class="copy footer-right">&copy; 2022 Alchemy Code Lab</div>
     </footer>
     <script type="module" src="./leaderboard.js"></script>
 </body>
