Added initials box

--- a/mario/index.html
+++ b/mario/index.html
@@ -9,7 +9,14 @@
 
 <body>
     <script type="module" src="./mario.js"></script>
+    <main>
     <!-- <script type="module" src="../build.js"></script> -->
+    <!-- <form>
+        <label for="fname">Initals</label><br>
+        <input type="text" id="initials" name="initials"><br>
+        <input type="submit" value="Submit">
+      </form> -->
+    </main>
 </body>
 
 </html>
