added some footer styling

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <style>
+        @media (max-width: 650px) {
+            .footer-right {
+                font-size: .8rem
+            }
+        }
+        .footer-right {
+            margin-left: 0;
+        }
+    </style>
     <title>Document</title>
 </head>
 
