--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header>
         <div class="header-left">
             <img src="assets/Kaboomio.gif" class="logo" />
+            <h1 id="sign-in-header">Welcome to Kaboomio!</h1>
         </div>
         <div class="header-right">
             <div class="icons">
