changin up homepage a little

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -23,17 +23,6 @@
     cursor: pointer;
 }
 
-@keyframes bounce {
-    0% {
-        left: 0;
-    }
-    50% {
-        left: 100%;
-    }
-    0% {
-        left: 0;
-    }
-} 
 
 #yoshi-egg{
     display: flex;
@@ -47,7 +36,7 @@
 }
 
 #yoshi-egg img{
-    height: 100px;
+    height: 50px;
     display: flex;
 }
 
@@ -68,7 +57,6 @@
     <header>
 
     </header>    
-    <!-- <button id="logout">Logout</button> -->
     <main id="homepage">
         <section id="display-games">
             <img src="/assets/Mario.gif" />
@@ -79,6 +67,7 @@
             <div id="display-leaderboard">
             </div>
         </section>
+        <!-- <img  id='kaboomio-logo' src="/assets/Kaboomio.gif" /> -->
         <a href="/about-page/index.html" id="yoshi-egg"><img src="/assets/egg gif.gif"></a>
     </main>
     <footer>
