about page html skeleton

--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="header-left">
-            <h1>Finish Profile Set Up to Continue</h1>
+            <h1>Finish Profile Setup to Continue</h1>
         </div>
         <div class="header-right">
             <div class="icons">
