--- a/home-page/index.html
+++ b/home-page/index.html
@@ -23,11 +23,37 @@
     cursor: pointer;
 }
 
+#homepage2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#kaboomio{
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(45, 0, 93);
+    padding: 20px;
+    width: 100%;
+    height: 200px;
+    margin: 30px;
+    flex-wrap: wrap;
+}
+
+#kaboomio img{
+    height: 200px;
+    padding: 10px;
+}
+
+#kaboomio h1{
+    color: white;
+    padding: 0;
+    position: relative;
+}
 
 #yoshi-egg{
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: flex-start;
     animation: bounce .4s linear;
     animation-direction: alternate;
@@ -39,6 +65,11 @@
 #yoshi-egg img{
     height: 50px;
     display: flex;
+}
+
+#second-row{
+    display: flex;
+    flex-direction: row;
 }
 
 @keyframes bounce {
@@ -58,18 +89,24 @@
     <header>
 
     </header>    
-    <main id="homepage">
-        <section id="display-games">
-            <img src="/assets/Mario.gif" />
-            <button id="play-game-button">Play Game</button>
+    <main id="homepage2">
+        <section id="kaboomio">
+            <h1>Welcome to Kaboomio</h1>
+            <img id="kaboomio-img" src="/assets/Kaboomio.gif" />
         </section>
-        <section id="leaderboard-container">
-            <p id="label">Leader Board 🏆</p>
-            <div id="display-leaderboard">
-            </div>
+        <section id="second-row">
+            <section id="display-games">
+                <img src="/assets/Mario.gif" />
+                <button id="play-game-button">Play Game</button>
+            </section>
+            <section id="leaderboard-container">
+                <p id="label">Leader Board 🏆</p>
+                <div id="display-leaderboard">
+                </div>
+                <a href="/about-page/index.html" id="yoshi-egg"><img src="/assets/egg gif.gif"></a>
+            </section>
         </section>
         <!-- <img  id='kaboomio-logo' src="/assets/Kaboomio.gif" /> -->
-        <a href="/about-page/index.html" id="yoshi-egg"><img src="/assets/egg gif.gif"></a>
     </main>
     <footer>
         <div class="footer-left">
