--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -15,7 +15,12 @@
     </style>
     <title>Profile Setup</title>
 </head>
-
+<div class="loading-screen">
+    <div class="loading-img-container">
+        <img src="../assets/mario-running.gif" class="loading-img" />
+    </div>
+    <p>Loading...</p>
+</div>
 <body>
     <header>
         <div class="header-left">
@@ -33,7 +38,7 @@
                 </a>
             </div>
         </div>
-    </header>    
+    </header>
     <!-- <button id="logout">Logout</button> -->
     <main>
         <form id="profile-setup-form">
