added loading screen to pages

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -74,8 +74,13 @@
     </style>
     <title>Document</title>
 </head>
-
 <body>
+    <div class="loading-screen invisible">
+        <div class="loading-img-container">
+            <img src="../assets/mario-running.gif" class="loading-img" />
+        </div>
+        <p>Loading...</p>
+    </div>
     <header>
         <div class="header-left">
             <h1>Meet the Team</h1>
