--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -12,8 +12,13 @@
     <link rel="stylesheet" href="../styles/home.css">
     <title>Document</title>
 </head>
-
 <body>
+    <div class="loading-screen invisible">
+        <div class="loading-img-container">
+            <img src="../assets/mario-running.gif" class="loading-img" />
+        </div>
+        <p>Loading...</p>
+    </div>
     <header>
         
         
