--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -15,13 +15,13 @@
     </style>
     <title>Profile Setup</title>
 </head>
-<div class="loading-screen">
-    <div class="loading-img-container">
-        <img src="../assets/mario-running.gif" class="loading-img" />
-    </div>
-    <p>Loading...</p>
-</div>
 <body>
+    <div class="loading-screen invisible">
+        <div class="loading-img-container">
+            <img src="../assets/mario-running.gif" class="loading-img" />
+        </div>
+        <p>Loading...</p>
+    </div>
     <header>
         <div class="header-left">
             <h1>Finish Profile Setup to Continue</h1>
