--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -81,8 +81,13 @@ justify-content: center;
 }
     </style>
 </head>
-
 <body>
+    <div class="loading-screen invisible">
+        <div class="loading-img-container">
+            <img src="../assets/mario-running.gif" class="loading-img" />
+        </div>
+        <p>Loading...</p>
+    </div>
     <header>
         <div class="header-left">
             <h1>Leaderboard</h1>
