added some additional header text styling rules

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <style>
+        @media (min-width: 660px) {
+            header {
+                font-size: 1rem;
+            }
+        }
         @media (max-width: 650px) {
             .footer-right {
                 font-size: .8rem
