--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
+    <style>
+        @media (min-width: 400px) {
+            header {
+                font-size: 1rem;
+            }
+        }
+    </style>
     <title>Document</title>
 </head>
 
