--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -80,6 +80,14 @@ justify-content: center;
     margin: 0;
 }
     </style>
+    <!-- Keep below in this html file -->
+    <style>
+        @media (min-width: 600px) {
+            header {
+                font-size: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="loading-screen invisible">
